const appname = "FarmConnect";
const appversion = "Version 1.0.0";
const Credit = "amalthomson";
const email = "E-mail";
const emailHint = "xyz@example.com";
const password = "Password";
const passwordHint = "******";
const forgetpass = "Forget password";
const login = "Log in";
const signup = "Sign up";
const createnew = "Create a new account";
const loginWith = "Login with";
const name = "Name";
const retypePass = "Re-type password";
const privacyTerms = "Privacy policies.";
const terms = " Terms and Conditions ";
const alreadyAccount = "Already have an account? ";
const home = "Home",
    category = "Categories",
    cart = "Cart",
    account = "Account";
const search = "Search Anything....",
    today = "Today's Deal",
    flashsale = "Flash Sale",
    topSeller = "Top Sellers",
    brand = "Brands",
    topCategory = "Top Categories",
    featuredategory = "Featured Categories",
    featuredProducts = "Featured Products",
    womenDress = "Women Dresses",
    girlWatches = "Girls Watches",
    mobilePhones = "Mobile Phones",
    boyGlasses = "Boys Glasses",
    tshirt = "T-Shirt",
    girlDress = "Girls Dresses";
const womenClothing = "Women clothes",
    menClothingFashin = "Man Clohting & Fashion",
    computerAcces = "Computer & Accessoires",
    automobile = "Automobile",
    kidToys = "Kids & Toys",
    sports = "Sports",
    beauty = "Beauty Kits",
    cellPhone = "Mobile phone & Tab",
    furniture = "Furniture";
const video = "Video",
    reviews = "Reviews",
    sellerPolicy = "Seller Policy",
    returnPolicy = "Return Policy",
    support = "Support",
    productYoumay = "Products you may also like";

const wishlist = "My wishlist", orders = "My Orders", messages = "Mesaages";

const loginSuccefully = "Logged in Succefully";
const logOutSuccefully = "Logged out Succefully";
